k8s/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
spec:
  selector:
    matchLabels:
      app: nginx-dep
  template:
    metadata:
      labels:
        app: nginx-dep
    spec:
      containers:
        - name: nginx-dep
          image: nginx:latest

          ports:
            - containerPort: 80
          imagePullPolicy: Always
