k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-dep
spec:
  selector:
    app: nginx-dep
  ports:
    - port: 8000
      targetPort: 80
  type: LoadBalancer
